--- a/docs/Hristolubov2020Accelerometer.tex
+++ b/docs/Hristolubov2020Accelerometer.tex
@@ -4,9 +4,6 @@
 
 \usepackage{dsfont}
 
-\usepackage{graphicx}
-\DeclareGraphicsExtensions{.pdf,.png,.jpg}
-
 \usepackage{csvsimple}
 
 \begin{document}
@@ -50,23 +47,35 @@
 \section{Постановка задачи}
 
 Пусть имеется исходный временной ряд $\mathbf{d}=\{d_i\}_{i=1}^M\in \mathds{R}^M$. Предполагается, что он состоит из последовательности сегментов: 
-$$\mathbf{d}=[\mathbf{s}_1, \ldots \mathbf{s}_N],$$
- где $\mathbf{s_i}\in \mathcal{S}$, $|\mathcal{S}|$~---~число различных действий (кластеров). Считается, что периоды $|\mathbf{s}|$ сегментов различаются незначительно, причем известен максимальный период $|\mathbf{s}|\leq T$.
+\begin{equation}\label{eq0}
+\mathbf{d}=[\mathbf{s}_1, \ldots \mathbf{s}_N],
+\end{equation}
+ где $\mathbf{s_i}\in Y$, $|Y|$~---~число различных действий (кластеров). Считается, что периоды $|\mathbf{s}|$ сегментов различаются незначительно, причем известен максимальный период $|\mathbf{s}|\leq T$.
 
 Требуется решить задачу классификации точек ряда: $$R:\mathcal{I}\rightarrow Y,$$ где $\mathcal{I}=\{1,\ldots M\}$~---~моменты времени, на котором задан временной ряд, а $Y$~---~метки классов.
 
-Каждый моменты времени $i_k$ отобразим с помощью $g:\mathcal{I}\rightarrow R^T$ в временной сегмент $\mathbf{x}_k$ длины $3\mathsf{T}$, по предположению, содержащий всю информацию о локальном поведении ряда:
+Каждый моменты времени $k$ отобразим с помощью $g:\mathcal{I}\rightarrow R^T$ в временной сегмент $\mathbf{x}_k$ длины $3T$, по предположению, содержащий всю информацию о локальном поведении ряда:
 \begin{equation}\label{eq1}
-g(i_k) = \mathbf{x}_k = \{d_i\}_{i=k-2\mathsf{T}}^{k+\mathsf{T}}.
+h(k) = \mathbf{x}_k = \{d_i\}_{i=k-2T}^{k+T}.
 \end{equation}
 
-Полученные сегменты $\mathbf{x} \in \mathcal{X}$~---~объекты сложной структуры, представленные временными рядами. Рассматривается задача классификации, а именно восстановление зависимости $$y=f(\mathbf{x}),$$ где $y\in Y$~---~пространство ответов. Тогда исходная задача классификации представляет собой $R=f\circ g$.
+\begin{figure}[H]
+\center{\includegraphics[scale=0.2, angle = -90]{prob}}
+\caption{ Временной ряд}
+\label{fig:image}
+\end{figure}
+
+
+Полученные сегменты $\mathbf{x} \in \mathcal{X}$~---~объекты сложной структуры, представленные временными рядами. Рассматривается задача классификации, а именно восстановление зависимости $$y=f(\mathbf{x}),$$ где $y\in Y$~---~пространство ответов. Тогда исходная задача классификации представляет собой $R=f\circ h$.
 
 Заданы выборка объектов сложной структуры и ответов $\mathfrak{D}=\{(\mathbf{x}_i,y_i)\}_{i=1}^m$. Задача состоит в нахождении функции $f$, минимизирующие суммарные потери на выборке $\mathfrak{D}$, при заданной функция потерь $\mathscr{L}:(\mathcal{X},F,Y)\rightarrow R$, $\mathscr{L}(f(\mathbf{x}_i),y_i)$, характеризующая ошибку классификации функции $f\in F$ на элементе $\mathbf{x}_i$. 
 
 Пусть $$w:\mathcal{X}\rightarrow W = \mathds{R}^n$$~---~процедура построения признакового описания сегмента. Тогда $W$~---~пространство признаков, в котором производится классификация временных рядов.
 
-Пусть $b$~---~алгоритм многоклассовой классификации: $$b:W\rightarrow Y$$
+Пусть $b$~---~алгоритм многоклассовой классификации: 
+\begin{equation}\label{classif}
+b:W\rightarrow Y
+\end{equation}
 
 Тогда $f$ ищется в среди композиций вида 
 $$f=b\circ w$$
@@ -91,81 +100,87 @@ $$Q_c(f,\mathfrak{L})=\frac{1}{|\mathfrak{L}|}\sum\limits_{(\mathbf{x},y)\in\mat
 
 \section{Порождение признаков}
 
-Модель $\hat{\mathbf{x}}(\mathbf{w},\mathbf{x})$, с помощью которой производится порождение признаков временных сегментов, называется локально-аппроксимирующей моделью, в силу локальности рассматриваемого сегмента временного ряда. В качестве признакового описания сегмента предлагается брать вектор оптимальных параметров $w$ модели: 
+Модель $g$, с помощью которой производится порождение признаков временных сегментов, называется локально-аппроксимирующей моделью, в силу локальности рассматриваемого сегмента \ref{eq1} временного ряда \ref{eq0}. В качестве признакового описания сегмента предлагается использовать вектор оптимальных параметров $w$ модели: 
 $$\mathbf{w}(\mathbf{x})=\argmin\limits_{\mathbf{w}}||\hat{\mathbf{x}}(\mathbf{w},\mathbf{x})-\mathbf{x}||_2$$
 
-Для порождения признакового описания $\hat{\mathbf{w}}$ для $L$-мерного временного ряда последовательно применяется операцию порождения признаков в точке к каждому одномерному ряду, а потом все полученные векторы признаков $\mathbf{w}_l$ объедняются:
-$$\hat{\mathbf{w}} = \mathbf{w}_1\oplus \ldots \oplus \mathbf{w}_L,$$
-где $\oplus$ это операция конкатенациии, $\mathbf{w}\in W$, $\hat{\mathbf{w}} \in W^L$
+Для порождения признакового описания $\hat{\mathbf{w}}$ для $L$-мерного временного ряда последовательно применяется операция порождения признаков к каждому одномерному ряду, и все полученные векторы признаков $\mathbf{w}_l$ объединяются:
+$$\widetilde{\mathbf{w}} = \mathbf{w}_1\times \ldots \times \mathbf{w}_L,$$
+где $\times$ это операция конкатенации, $\mathbf{w}\in W$, $\widetilde{\mathbf{w}} \in W^L$
 
 
 \subsection{Авторегрессия}
-Модель авторегрессии $AR(\mathsf{T})$ предсказывает следующее значение сегмента (\ref{eq1}) как линейную комбинацию $2\mathsf{T}$ предыдущих:
-$$\hat{x}^{(k)}=w_0+\sum\limits_{j=1}^{2\mathsf{T}} w_i x^{(k-j)}$$
+Модель авторегрессии AR($2$T) предсказывает следующее значение сегмента (\ref{eq1}) как линейную комбинацию $2T$ предыдущих:
+$$\hat{x}^{(k)}=w_0+\sum\limits_{j=1}^{2T} w_i x^{(k-j)}.$$
 
-Для нахождения оптимального вектора параметров $\mathbf{w}$ нужно решить задачу минимизации:
-$$\mathbf{w}(\mathbf{x})=\argmin_{\mathbf{w}}(||\mathbf{x}-\hat{\mathbf{x}}||_2^2=\argmin_{\mathbf{w}}||\mathbf{x}-\mathbf{X}\mathbf{w}||_2^2=(\mathbf{X}^T\mathbf{X})^{-1}\mathbf{X}^T\mathbf{x},$$
+Для нахождения оптимального вектора параметров $\mathbf{w}$ решается задача минимизации:
+$$\mathbf{w}(\mathbf{x})=\argmin_{\mathbf{w}}(||\mathbf{x}-\hat{\mathbf{x}}||_2^2=\argmin_{\mathbf{w}}||\mathbf{x}-\mathbf{X}\mathbf{w}||_2^2=(\mathbf{X}^\mathsf{T}\mathbf{X})^{-1}\mathbf{X}^\mathsf{T}\mathbf{x},$$
 где $\mathbf{X}$~---~матрица Ганкеля:
 
-\begin{equation*}
+\begin{equation*}\label{gankel}
 \mathbf{X} = \left(
 \begin{array}{cccc}
-x^{(1)} & x^{(2)} & \ldots & x^{(\mathsf{T})}\\
-x^{(2)} & x^{(3)} & \ldots & x^{(\mathsf{T}+1)}\\
+x^{(1)} & x^{(2)} & \ldots & x^{(T)}\\
+x^{(2)} & x^{(3)} & \ldots & x^{(T+1)}\\
 \vdots & \vdots & \ddots & \vdots\\
-x^{(2\mathsf{T}+1)} & x^{(2\mathsf{T}+2)} & \ldots & x^{(3\mathsf{T})}
+x^{(2T+1)} & x^{(2T+2)} & \ldots & x^{(3T)}
 \end{array}
-\right)
+\right).
 \end{equation*}
 
 \subsection{ Анализ сингулярного спектра}
-Рассмотрим модель SSA порождения данных. Поставим в соответствие временному сегменту $\mathbf{x}$ траекторную матрицу $\mathbf{X}$. Ее сингулярное разложение 
-$$\mathbf{X}^T\mathbf{X}=\mathbf{V}\mathbf{H}\mathbf{V}^T, \mathbf{H} = \text{diag}(h_1,\ldots h_\mathsf{T}).$$ 
-$h_1\ldots h_\mathsf{T}$~---~собственные числа матрицы $\mathbf{X}^T\mathbf{X}$. Первая пара собственных чисел берется в качестве нового признакового описания $\mathbf{w}=(h_1,h_2)$.  
+Рассмотрим модель SSA порождения данных. Поставим в соответствие временному сегменту $\mathbf{x}$ его траекторную матрицу $\mathbf{X}$ \ref{gankel}. Ее сингулярное разложение 
+$$\mathbf{X}^\mathsf{T}\mathbf{X}=\mathbf{V}\mathbf{H}\mathbf{V}^\mathsf{T},\quad \mathbf{H} = \text{diag}(h_1,\ldots h_T).$$ 
+$h_1\ldots h_T$~---~собственные числа матрицы $\mathbf{X}^\mathsf{T}\mathbf{X}$. Первые десять собственных чисел берется в качестве нового признакового описания $\mathbf{w}=[h_1,\ldots h_{10}]$.  
 
 \subsection{ Дискретное преобразование Фурье}
 К временному сегменту применяется дискретное преобразование Фурье:
-$$w_k = \sum\limits_{n=1}^{2\mathsf{T}}x^{(k)}e^{-\frac{2\pi i}{2\mathsf{T}}kn}$$
-и в качестве признаков $\mathbf{w}$ берутся все его коэффициенты.
+$$w_k = \sum\limits_{n=1}^{T}x^{(k)}e^{-\frac{2\pi i}{T}kn},$$
+или же в матричном виде $\mathbf{w} = \mathbf{Z}x,$ где матрица $\mathbf{Z}$:
+
+\begin{equation*}
+\mathbf{Z} = \left(
+\begin{array}{cccc}
+e^{-\frac{2\pi i}{T}} & e^{-\frac{2\pi i}{T}\cdot 2} & \ldots & e^{-\frac{2\pi i}{T}\cdot T}\\
+e^{-\frac{2\pi i}{T}\cdot 2}\ & e^{-\frac{2\pi i}{T}\cdot 4}\ & \ldots & e^{-\frac{2\pi i}{T}\cdot 2\cdot T}\\\
+\vdots & \vdots & \ddots & \vdots\\
+e^{-\frac{2\pi i}{T}\cdot 3T}\ & e^{-\frac{2\pi i}{T}\cdot 3T\cdot 2}\ & \vdots & e^{-\frac{2\pi i}{T}\cdot 3T\cdot T}\
+\end{array}
+\right).
+\end{equation*}
+
+В качестве признаков $\mathbf{w}$ берутся $T$ коэффициентов Фурье.
 
 
 \section{Вычислительный эксперимент}
 
-Цель эксперимента: исследовать влияние использования результата решения одной из задач классифкации на решение другой задачи. Исследование зависимости между решениями задачи классификации типа активности и задачи классификации пола.
+В качестве вычислительного эксперимента решаются две задачи:  классификация типов активности человека и классификация пола человека. 
 
-Условия измерения данных: данные~---~это измерения акселерометра и гироскопа, встроенных в мобильное устройство IPhone 6s, хранящегося в переднем кармане брюк участника. Временные ряды содержат значения ускорения человека и углы ориентацию телефона для каждой из трёх осей~---~всего шесть временных рядов. Частота дискретизации составляет $50$ Гц. Метками классов служат: подъем по лестнице вверх, спуск по лестнице вниз, ходьба, бег трусцой, сидение, лежание. Данные собраны с $24$ участников, для каждого из  которых известны рост, вес, возраст и пол. Данные собирались в условиях проведения эксперимента: участникам выдавали телефон и просили выполнять одно из шести действий в течении двух минут.
+Условия измерения данных: данные~---~это измерения акселерометра и гироскопа, встроенных в мобильное устройство IPhone 6s, хранящегося в переднем кармане брюк участника. Временные ряды содержат значения ускорения человека и углы ориентацию телефона для каждой из трёх осей~---~всего шесть временных рядов. Частота дискретизации составляет $50$ Гц. Метками классов служат: подъем по лестнице вверх, спуск по лестнице вниз, ходьба, бег трусцой, сидение, лежание. Данные собраны с $24$ участников, для каждого из  которых известны рост, вес, возраст и пол. Данные собирались в условиях проведения эксперимента: участникам выдавали телефон и просили выполнять одно из шести действий в течении двух минут \url{https://github.com/mmalekzadeh/motion-sense}.
 
 Для эксперимента берется шесть временных рядов в $39000$ временных моментов ($780$ секунд). Данные снимаются с четырех человек (двое мужчин и две женщины), которые выполняют подъем или спуск по лестнице (два типа деятельности).
 
-\includegraphics{data}
+\includegraphics[scale=0.43]{data}
 
-В силу большой размерности и того, что тип деятельности не изменяется часто, целесообразно классифицировать временной ряд только в каждый десятый момент времени (десять раз в секунду), а остальные точки относить к тому же классу, которому принадлежит ближайшая точка. Это позволяет уменьшить размер выборки для классификации с $39000$ точек до $3900$, если классифицировать каждую десятую точку.
+Производится классификация не всех моментов времени, а только каждый десятый момент времени (пять в секунду), а класс остальных моментов времени определяется классом ближайшего классифицированного момента времени.. Это позволяет уменьшить размер выборки для классификации с $39000$ точек до $3900$, если классифицировать каждую десятую точку.
 
-На соответствующих моментам времени сегментах строятся локально-аппроксимирующие модели, чьи параметры используются в качестве признаков. Сравниваются информативность признаков, порожденных моделью авторегресси (с $50$ членами), коэффициенты ряда Фурье ($100$ для каждого ряда), $2$ сингулярных числа SSA разложения. 
+На соответствующих моментам времени сегментах строятся локально-аппроксимирующие модели, чьи параметры используются в качестве признаков. Сравниваются информативность признаков, порожденных моделью авторегресси (с $50$ членами), коэффициенты ряда Фурье ($100$ для каждого ряда), $10$ сингулярных числа SSA разложения. 
 
-Отбор оптимальных признаков производится сначала по критерию Пирсона (остается $8\%$ ризнаков), потом оптимальные $20$ выбираются методом перебора Sequential Backward Floating Selection \cite{Somol10} для выбранной модели классификации. Алгоритм перебора состоит из двух шагов:
+Отбор оптимальных признаков производится методом Sequential Backward Floating Selection \cite{Somol10} для выбранной модели классификации. 
 
-1) Выбор признака $w^- = \argmax\limits_{w^- \in w} \max\limits_{f}\widehat{CV}(f, \mathfrak{D}(w^k-w^-)$, без которого модель классификации, полученная на оставшихся признаках дает максимальное значение $\widehat{CV}(f^*, \mathfrak{D}(w^k-w^-)$, где $\widehat{hat{CV}}$ это (\ref{CV}), и отбрасывание $w^-$ из вектора признаков $w^{k-1}=w^k-w^-$.
+Для классификации используются две модели $b$ (\ref{classif}).
 
-2) Если существует признак $w^+$, добавив который, можно получить большее значение функции, чем она была на выборке c признакми, которые были до предыдущего шага $\max\limits_f \widehat{CV}(f, \mathfrak{D}(w^{k-1}+w^-))<\max\limits_f \widehat{CV}(f, \mathfrak{D}(w^{k-1}+w^+))$, то добавить этот признак к вектору признаков $w^k = w^{k-1}+w^+$.
-
-Эти шаги повторяются, пока не останется $20$ оптимальных признаков, то есть пока не будет достигнуто равенство $k =20$.
-
-Для классификации используется две модели для обучения.
-
-1) Логистическая регресия \cite{Peng02} c $l_2$ регуляризацией, для которой $\widetilde{Q}$ в (\ref{func_loss}) задается выражением:
-$$\widetilde{Q}(w,\mathfrak{D}) = \frac{1}{2}w^Tw + \sum\limits_{i=1}^{|\mathfrak{D}|} \ln(1+exp(-y_i(X_i^Tw+c)))$
+1) Логистическая регрессия \cite{Peng02} c $l_2$ регуляризацией, для которой $\widetilde{Q}$ в (\ref{func_loss}) задается выражением:
+$$\widetilde{Q}(w,\mathfrak{D}) = \frac{1}{2}w^Tw + \sum\limits_{i=1}^{|\mathfrak{D}|} \ln(1+exp(-y_i(X_i^Tw+c))).$$
 
 2) C-Support Vector Classification \cite{Liu11}, минимизирующий функцию: 
-\begin{align}\begin{aligned}\min_ {w, b, \zeta} \frac{1}{2} w^T w + C \sum_{i=1}^{n} \zeta_i\\\begin{split}\textrm {subject to } & y_i (w^T \phi (x_i) + b) \geq 1 - \zeta_i,\\
-& \zeta_i \geq 0, i=1, ..., n\end{split}\end{aligned}\end{align}
+\begin{align}\begin{aligned}\min_ {w, b, \zeta} \frac{1}{2} w^T w + C \sum_{i=1}^{n} \zeta_i,\\\begin{split}\textrm {subject to } & y_i (w^T \phi (x_i) + b) \geq 1 - \zeta_i,\\
+& \zeta_i \geq 0, i=1, ..., n,\end{split}\end{aligned}\end{align}
 где $K(x_i, x_j) = \phi (x_i)^T \phi (x_j)$~---~ядро.
 
-Для исследования зависимости между решением задач классификации активности и пола находятся общие признаки, попавшие в векторы оптимальных параметров для решения обоих задач классификации. Однако, в силу высокой размерности
-и мультиколлинеарности возможна ситуация, когда для решения обоих задач используют одну и ту же информацию, хотя векторы оптимальных признаков не имеют общих компонент. Поэтому для проверки наличия причинно-следственной зависимости между активностью и полом производится обучения на расширенной матрице признаков: сначала решается одна задача классификации, а потом полученный вектор решения используется как признак для решения второй задачи.
+Отдельно решаются задачи классификации активности и пола человека. После этого для проверки наличия причинно-следственной зависимости между активностью и полом производится обучения на расширенной матрице признаков: сначала решается одна задача классификации, а потом полученный вектор решения используется как признак для решения второй задачи.
 
 \begin{table}[H]
-\caption{Результаты экспериментов}
+\caption{Среднее и дисперсия верных классификаций при кросс-валидации}
 \begin{table}[H]
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
 \hline
@@ -179,19 +194,27 @@ after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
 
 \end{table}
 
-Результаты экспериментов показывают, что использование полового признака при определении типа деяетльности не улучшает точности модели, а использование типа актиности при определении пола значительно уменьшает ошибки и увеличивает устойчиовсть модели логистической регрессии. Ошибки модели C-Support Vector Classification не уменьшаются, но увеличивается устойчивость.
+Результаты показывают, что использование пола при определении типа деятетльности не улучшает точности модели, а использование типа актиности при определении пола значительно уменьшает ошибки и увеличивает устойчивость модели логистической регрессии. Ошибки модели C-Support Vector Classification не уменьшаются, но увеличивается устойчивость.
+
+\begin{figure}[H]
+\center{\includegraphics[scale=0.4]{corr}}
+\caption{ Корреляционная матрица оптимальных признаков}
+\label{fig:image}
+\end{figure}
+
+Первые $13$ признаков~---~это оптимальные признаки для решения задачи классификации активности, последние $7$ признаков~---~оптимальные в задаче классификации пола.
 
 
-\section{Заключение}
-Желательно, чтобы этот раздел был, причём он не~должен дословно повторять аннотацию.
-Обычно здесь отмечают, каких результатов удалось добиться, какие проблемы остались открытыми.
+\section{ Дополнение}
+\label{dop}
 
-%%%% если имеется doi цитируемого источника, необходимо его указать, см. пример в \bibitem{article}
-%%%% DOI публикации, зарегистрированной в системе Crossref, можно получить по адресу http://www.crossref.org/guestquery/
-%\begin{thebibliography}{99}
-	
- 	
-%\end{thebibliography}
+Алгоритм отбора Sequential Backward Floating Selection состоит из двух шагов:
+
+1) Выбор признака $w^- = \argmax\limits_{w^- \in w} \max\limits_{f}\widehat{CV}(f, \mathfrak{D}(w^k-w^-)$, без которого модель классификации, полученная на оставшихся признаках дает максимальное значение $\widehat{CV}(f^*, \mathfrak{D}(w^k-w^-)$, где $\widehat{\hat{CV}}$ это (\ref{CV}), и отбрасывание $w^-$ из вектора признаков $w^{k-1}=w^k-w^-$.
+
+2) Если существует признак $w^+$, добавив который, можно получить большее значение функции, чем она была на выборке c признакми, которые были до предыдущего шага $\max\limits_f \widehat{CV}(f, \mathfrak{D}(w^{k-1}+w^-))<\max\limits_f \widehat{CV}(f, \mathfrak{D}(w^{k-1}+w^+))$, то добавить этот признак к вектору признаков $w^k = w^{k-1}+w^+$.
+
+Эти шаги повторяются, пока не останется $K$ оптимальных признаков, то есть пока не будет достигнуто равенство $k=K$.
 
 \maketitleSecondary
 \English
@@ -290,5 +313,6 @@ after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
 \printbibliography
   	     	
 \end{thebibliography}
+
 
 \end{document}
