--- a/docs/Hristolubov2020Accelerometer.tex
+++ b/docs/Hristolubov2020Accelerometer.tex
@@ -24,11 +24,11 @@
 \organization
     {$^1$Московский физико-технический институт}
 \abstract
-    {В работе рассматривается классификация временных рядов акселерометра. Классификация производится методам порождения признаков с помощью локально аппроксимирующих моделей. Предполагается, что точки временного ряда можно разбить на кластеры, соответствующие разным классам. Предлагается выделить квазипериодические сегменты из временных интервалов точек, принадлежащих одному кластеру. В качестве признаков для классификации использовать параметры моделей, обученных на этих сегментах. Исследуется вопрос информативности порожденных признаков и возможность идентификации по ним владельца прибора или его физических параметров.
+    {В работе решается задача классификации временных рядов акселерометра. Классификация производится в пространстве признаков, описывающих классифицируемые объекты (моменты времени). Признаки порождаются с помощью локально-аппроксимирующих моделей.  Предлагается выделить квазипериодические сегменты для каждого классифицируемого момента времени. В качестве признаков для классификации использовать параметры моделей, обученных на этих сегментах. Исследуется вопрос информативности порожденных признаков и возможность классификации типа активности владельца прибора или его физических параметров.
 	
 \bigskip
 \noindent
-\textbf{Ключевые слова}: \emph {временной ряд; классификация; кластеризация; сегментация временного ряда; локально аппроксимирующая модель}
+\textbf{Ключевые слова}: \emph {временной ряд; классификация; сегментация временного ряда; локально-аппроксимирующая модель, порождение признаков}
 }
 
 \maketitle
@@ -36,41 +36,41 @@
 
 \section{Введение}
 
-В статье изучается задача идентификации движений человека по временным рядам. В дополнении к этому исследуется возможность выделение атрибутивных паттернов, которые могут быть использованы для определения личности или физических параметров субъектов данных в дополнении к их деятельности. Классификация временных рядов находит широкое применение в сфере здравоохранения.
+В статье изучается задача классификации движений человека по временным рядам. Исследуется возможность выделения признаков моментов времени, которые могут быть использованы для определения личности или физических параметров субъектов данных в дополнении к их деятельности. Классификация временных рядов находит широкое применение в сфере здравоохранения.
 
-Временные ряды являются объектами сложной структуры, требующие предварительной обработки и представления их в удобном для классификации виде. Необходимо отобразить исходный временной ряд в некоторое пространство признаков. Например, в статье \cite{Ivkin15} временной ряд аппроксимируется моделью, а признаками являются ее параметры. В качестве аппроксимирующей модели берется модель авторегрегрессии, а так же собственные числа траекторной матрицы, в случае модели сингулярного спектра. В работе \cite{Karasikov16} проводится разбиение временных рядов на сегменты фиксированной длины, на которых впоследствии обучается локально-аппроксимирующая модель. Для аппроксимации используется линейная модель, модель авторегрессии и коэффициенты преобразования Фурье. В \cite{Anikeev18} предлагается более разумный способ сегментации, а так же применяется аппроксимации сплайнами. Еще более общий подход к способу сегментации посредством нахождения главных компонент траекторной матрицы, рассмотрен в \cite{Motrenko16}. В \cite{Bochkarev18} сравниваются между собой перечисленные выше подходы.
+Временные ряды являются объектами сложной структуры, требующие предварительной обработки и представления их в удобном для классификации виде. Необходимо отобразить исходный временной ряд в пространство признаков. Например, в \cite{Ivkin15} временной ряд аппроксимируется моделью авторегрессии, а признаками являются ее параметры. В качестве аппроксимирующей модели используется модель сингулярного спектра, а признаками являются собственные числа траекторной матрицы. В работе \cite{Karasikov16} временные ряды разбиваются на сегменты фиксированной длины, на которых строится локально-аппроксимирующая модель. Для аппроксимации используется линейная модель, модель авторегрессии и коэффициенты преобразования Фурье. В \cite{Anikeev18} предлагается использовать в качестве сегментов интервалы между локалькными максимумами временного ряда. Еще более общий подход к способу сегментации посредством нахождения главных компонент траекторной матрицы, рассмотрен в \cite{Motrenko16}. В \cite{Bochkarev18} сравниваются между собой перечисленные выше подходы.
 
-Метод кластеризации точек, соответствующих участкам разной деятельности, с помощью методы главных компонента (SSA, алгоритм гусеница \cite{Danilov97}) рассмотрен в \cite{Grabovoy20}. На участках, содержащих точки одного кластера, уже можно применять описанные выше методы. Другим подходом к классификации точек временного ряда на основе нейросетей рассмотрены в \cite{Dafne19} и \cite{Cinar18}.
+Метод кластеризации точек, соответствующих участкам разной деятельности, с помощью методы главных компонент (SSA, алгоритм гусеница \cite{Danilov97}) рассмотрен в \cite{Grabovoy20}. На участках, содержащих точки одного кластера, применяются описанные выше методы. Другим подходом к классификации точек временного ряда на основе нейросетей рассмотрены в \cite{Dafne19} и \cite{Cinar18}.
 
-В работе исследуется оптимальное признаковое описание точек пр которому можно будет идентифицировать род деятельности человека. Предлагается построить набор локально-аппроксимирующих моделей и выбрать наиболее адекватные. Производится построение пространства описаний элементарных движений. Новизна работы заключается в исследовании зависимости решений задач классификации действий и предсказания параметров человека.
+В работе исследуется оптимальное признаковое описание точек пр которому можно будет идентифицировать род деятельности человека. Предлагается построить набор локально-аппроксимирующих моделей и выбрать наиболее адекватные. Производится построение пространства описаний элементарных движений. Новизна работы заключается в исследовании зависимости решений задач классификации действий и предсказании параметров человека. 
 
 \section{Постановка задачи}
 
-Пусть имеется исходный временной ряд $\mathbf{d}=\{d_i\}_{i=1}^M\in \mathds{R}^M$. Предполагается, что он состоит из последовательности сегментов: 
+Задан исходный временной ряд $\mathbf{d}=\{d_i\}_{i=1}^M\in \mathds{R}^M$. Предполагается, что он состоит из последовательности сегментов: 
 \begin{equation}\label{eq0}
 \mathbf{d}=[\mathbf{s}_1, \ldots \mathbf{s}_N],
 \end{equation}
- где $\mathbf{s_i}\in Y$, $|Y|$~---~число различных действий (кластеров). Считается, что периоды $|\mathbf{s}|$ сегментов различаются незначительно, причем известен максимальный период $|\mathbf{s}|\leq T$.
+ где $\mathbf{s}_i\in Y$ (по элементно), $|Y|$~---~количество классов. Считается, что периоды $|\mathbf{s}|$ сегментов различаются незначительно, причем известен максимальный период $|\mathbf{s}|\leq T$.
 
 Требуется решить задачу классификации точек ряда: $$R:\mathcal{I}\rightarrow Y,$$ где $\mathcal{I}=\{1,\ldots M\}$~---~моменты времени, на котором задан временной ряд, а $Y$~---~метки классов.
 
-Каждый моменты времени $k$ отобразим с помощью $g:\mathcal{I}\rightarrow R^T$ в временной сегмент $\mathbf{x}_k$ длины $3T$, по предположению, содержащий всю информацию о локальном поведении ряда:
+Каждый классифицируемый момент времени $k\in [1,\ldots K]\subseteq\mathcal{I}$, где $K$~---~кол-во классифицируемых моментов времени, отобразим с помощью $h:\mathcal{I}\rightarrow \mathds{R}^{3T}$ в временной сегмент $\mathbf{x}_k$ длины $3T$, по предположению, содержащий всю необходимую информацию о локальном поведении ряда:
 \begin{equation}\label{eq1}
 h(k) = \mathbf{x}_k = \{d_i\}_{i=k-2T}^{k+T}.
 \end{equation}
 
 \begin{figure}[H]
 \center{\includegraphics[scale=0.2, angle = -90]{prob}}
-\caption{ Временной ряд}
+\caption{ Временной ряд, получаемый с акселерометра}
 \label{fig:image}
 \end{figure}
 
 
-Полученные сегменты $\mathbf{x} \in \mathcal{X}$~---~объекты сложной структуры, представленные временными рядами. Рассматривается задача классификации, а именно восстановление зависимости $$y=f(\mathbf{x}),$$ где $y\in Y$~---~пространство ответов. Тогда исходная задача классификации представляет собой $R=f\circ h$.
+Полученные сегменты $\mathbf{x} \in \mathbb{X}\subseteq \mathds{R}^{3T}$~---~объекты сложной структуры, представленные временными рядами. Рассматривается задача классификации, а именно восстановление зависимости $$y=f(\mathbf{x}),$$ где $y\in Y$~---~пространство ответов. Тогда исходная задача классификации представляет собой $R=f\circ h$.
 
-Заданы выборка объектов сложной структуры и ответов $\mathfrak{D}=\{(\mathbf{x}_i,y_i)\}_{i=1}^m$. Задача состоит в нахождении функции $f$, минимизирующие суммарные потери на выборке $\mathfrak{D}$, при заданной функция потерь $\mathscr{L}:(\mathcal{X},F,Y)\rightarrow R$, $\mathscr{L}(f(\mathbf{x}_i),y_i)$, характеризующая ошибку классификации функции $f\in F$ на элементе $\mathbf{x}_i$. 
+Заданы выборка объектов сложной структуры и ответов $\mathfrak{D}=\{(\mathbf{x}_i,y_i)\}_{i=1}^m$. Задача состоит в нахождении функции $f$, минимизирующие суммарные потери на выборке $\mathfrak{D}$, при заданной функция потерь $\mathscr{L}:(\mathbb{X},F,Y)\rightarrow R$, $\mathscr{L}(f(\mathbf{x}_i),y_i)$, характеризующая ошибку классификации функции $f\in F$ на элементе $\mathbf{x}_i$. 
 
-Пусть $$w:\mathcal{X}\rightarrow W = \mathds{R}^n$$~---~процедура построения признакового описания сегмента. Тогда $W$~---~пространство признаков, в котором производится классификация временных рядов.
+Пусть $$w:\mathbb{X}\rightarrow W = \mathds{R}^n$$~---~процедура построения признакового описания сегмента. Тогда $W$~---~пространство признаков, в котором производится классификация временных рядов.
 
 Пусть $b$~---~алгоритм многоклассовой классификации: 
 \begin{equation}\label{classif}
@@ -100,12 +100,12 @@ $$Q_c(f,\mathfrak{L})=\frac{1}{|\mathfrak{L}|}\sum\limits_{(\mathbf{x},y)\in\mat
 
 \section{Порождение признаков}
 
-Модель $g$, с помощью которой производится порождение признаков временных сегментов, называется локально-аппроксимирующей моделью, в силу локальности рассматриваемого сегмента \ref{eq1} временного ряда \ref{eq0}. В качестве признакового описания сегмента предлагается использовать вектор оптимальных параметров $w$ модели: 
-$$\mathbf{w}(\mathbf{x})=\argmin\limits_{\mathbf{w}}||\hat{\mathbf{x}}(\mathbf{w},\mathbf{x})-\mathbf{x}||_2$$
+Модель $\hat{\mathbf{x}}(\mathbf{v})$, с помощью которой производится порождение признаков временных сегментов, называется локально-аппроксимирующей моделью, в силу локальности рассматриваемого сегмента \eqref{eq1} временного ряда \eqref{eq0}. В качестве признакового описания сегмента предлагается использовать вектор параметров $\mathbf{w}$ модели $\hat{\mathbf{x}}(\mathbf{v})$: 
+$$\mathbf{w}(\mathbf{x})=\argmin\limits_{\mathbf{v}}||\hat{\mathbf{x}}(\mathbf{v})-\mathbf{x}||_2,$$
 
-Для порождения признакового описания $\hat{\mathbf{w}}$ для $L$-мерного временного ряда последовательно применяется операция порождения признаков к каждому одномерному ряду, и все полученные векторы признаков $\mathbf{w}_l$ объединяются:
-$$\widetilde{\mathbf{w}} = \mathbf{w}_1\times \ldots \times \mathbf{w}_L,$$
-где $\times$ это операция конкатенации, $\mathbf{w}\in W$, $\widetilde{\mathbf{w}} \in W^L$
+Для порождения признакового описания $\widetilde{\mathbf{w}}$ для $L$-мерного временного ряда последовательно применяется операция порождения признаков к каждому одномерному ряду, и все полученные векторы признаков $\mathbf{w}_l$ объединяются:
+$$\widetilde{\mathbf{w}} = [\mathbf{w}_1,\ldots,\mathbf{w}_L],$$
+где $,$ это операция конкатенации, $\mathbf{w}\in W$, $\widetilde{\mathbf{w}} \in W^L$
 
 
 \subsection{Авторегрессия}
@@ -128,7 +128,7 @@ x^{(2T+1)} & x^{(2T+2)} & \ldots & x^{(3T)}
 \end{equation*}
 
 \subsection{ Анализ сингулярного спектра}
-Рассмотрим модель SSA порождения данных. Поставим в соответствие временному сегменту $\mathbf{x}$ его траекторную матрицу $\mathbf{X}$ \ref{gankel}. Ее сингулярное разложение 
+Рассмотрим модель SSA порождения данных. Поставим в соответствие временному сегменту $\mathbf{x}$ его траекторную матрицу $\mathbf{X}$ \eqref{gankel}. Ее сингулярное разложение 
 $$\mathbf{X}^\mathsf{T}\mathbf{X}=\mathbf{V}\mathbf{H}\mathbf{V}^\mathsf{T},\quad \mathbf{H} = \text{diag}(h_1,\ldots h_T).$$ 
 $h_1\ldots h_T$~---~собственные числа матрицы $\mathbf{X}^\mathsf{T}\mathbf{X}$. Первые десять собственных чисел берется в качестве нового признакового описания $\mathbf{w}=[h_1,\ldots h_{10}]$.  
 
@@ -148,7 +148,7 @@ e^{-\frac{2\pi i}{T}\cdot 3T}\ & e^{-\frac{2\pi i}{T}\cdot 3T\cdot 2}\ & \vdots 
 \right).
 \end{equation*}
 
-В качестве признаков $\mathbf{w}$ берутся $T$ коэффициентов Фурье.
+В качестве признаков $\mathbf{w}$ берутся первые $T$ коэффициентов Фурье.
 
 
 \section{Вычислительный эксперимент}
@@ -167,34 +167,37 @@ e^{-\frac{2\pi i}{T}\cdot 3T}\ & e^{-\frac{2\pi i}{T}\cdot 3T\cdot 2}\ & \vdots 
 
 Отбор оптимальных признаков производится методом Sequential Backward Floating Selection \cite{Somol10} для выбранной модели классификации. 
 
-Для классификации используются две модели $b$ (\ref{classif}).
+Для классификации используются две модели \eqref{classif}.
+
 
 1) Логистическая регрессия \cite{Peng02} c $l_2$ регуляризацией, для которой $\widetilde{Q}$ в (\ref{func_loss}) задается выражением:
-$$\widetilde{Q}(w,\mathfrak{D}) = \frac{1}{2}w^Tw + \sum\limits_{i=1}^{|\mathfrak{D}|} \ln(1+exp(-y_i(X_i^Tw+c))).$$
+$$\widetilde{Q}(\mathbf{w},\mathfrak{D}) = \frac{1}{2}\mathbf{w}^\mathsf{T}\mathbf{w} + \sum\limits_{i=1}^{|\mathfrak{D}|} \ln(1+\exp(-y_i(\mathbf{X}_i^\mathsf{T}\mathbf{w}+\mathbf{c}))).$$
 
 2) C-Support Vector Classification \cite{Liu11}, минимизирующий функцию: 
-\begin{align}\begin{aligned}\min_ {w, b, \zeta} \frac{1}{2} w^T w + C \sum_{i=1}^{n} \zeta_i,\\\begin{split}\textrm {subject to } & y_i (w^T \phi (x_i) + b) \geq 1 - \zeta_i,\\
+\begin{align}\begin{aligned}\min_ {\mathbf{w}, b, \zeta} \frac{1}{2} \mathbf{w}^\mathsf{T} \mathbf{w} + C \sum_{i=1}^{n} \zeta_i,\\\begin{split}\textrm {subject to } & y_i (\mathbf{w}^\mathsf{T} \phi (\mathbf{x}_i) + b) \geq 1 - \zeta_i,\\
 & \zeta_i \geq 0, i=1, ..., n,\end{split}\end{aligned}\end{align}
-где $K(x_i, x_j) = \phi (x_i)^T \phi (x_j)$~---~ядро.
+где $K(\mathbf{x}_i, \mathbf{x}_j) = \phi (\mathbf{x}_i)^T \phi (\mathbf{x}_j)$~---~ядро.
 
 Отдельно решаются задачи классификации активности и пола человека. После этого для проверки наличия причинно-следственной зависимости между активностью и полом производится обучения на расширенной матрице признаков: сначала решается одна задача классификации, а потом полученный вектор решения используется как признак для решения второй задачи.
 
 \begin{table}[H]
-\caption{Среднее и дисперсия верных классификаций при кросс-валидации}
+\caption{Среднее и дисперсия доли верных классификаций}
 \begin{table}[H]
+\centering
+\resizebox{\columnwidth}{!}{%
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
 \hline
-               & mean(activity)   & std(activity) & mean(gender) & std(gender) & Сommon features\\ \hline
-Log Regression & 0.888 & 0.162 & 0.928  & 0.212    & 0 \\
-after adding   & 0.882 & 0.170 & 0.955  & 0.112    &     \\ \hline
-SVC            & 0.911 & 0.143 & 0.962  & 0.110    & 0 \\
-after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
+               & mean(activity)   & std(activity) & mean(gender) & std(gender) & Сommon feats\\ \hline
+LogRegression  & 0.908 & 0.147 & 0.952  & 0.152    & 1 \\
+after adding   & 0.903 & 0.152 & 0.950  & 0.136    &     \\ \hline
+SVC            & 0.934 & 0.097 & 0.971  & 0.074    & 1 \\
+after adding   & 0.933 & 0.101 & 0.966  & 0.072    & \\ \hline
 \end{tabular}
+}
 \end{table}
 
 \end{table}
 
-Результаты показывают, что использование пола при определении типа деятетльности не улучшает точности модели, а использование типа актиности при определении пола значительно уменьшает ошибки и увеличивает устойчивость модели логистической регрессии. Ошибки модели C-Support Vector Classification не уменьшаются, но увеличивается устойчивость.
 
 \begin{figure}[H]
 \center{\includegraphics[scale=0.4]{corr}}
@@ -202,7 +205,42 @@ after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
 \label{fig:image}
 \end{figure}
 
-Первые $13$ признаков~---~это оптимальные признаки для решения задачи классификации активности, последние $7$ признаков~---~оптимальные в задаче классификации пола.
+Первые $14$ признаков~---~это оптимальные признаки для решения задачи классификации активности, последние $7$ признаков~---~оптимальные в задаче классификации пола. Десятый признак~---~общий признак для обоих классификаторов, являющийся третьим сингулярным числом ряда, который характеризует угол поворота в вертикальной плоскости, параллельной направлению движения (pitch).
+
+
+На этих $21$ оптимальных признаках была решена задача классификации логистической регресией. Сравним распределения параметров моделей задач классификации активности и пола человека.
+
+\begin{table}[H]
+\caption{Средние и дисперсии векторов параметров моделей классифкации активности и пола}
+\begin{table}[]
+\centering
+\resizebox{\columnwidth}{!}{%
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|l|}
+\hline
+mean(act) & -2.89 & -1.37 & 4.20 & 1.58  & -3.41 & -2.86 & 4.51 & 4.12 & -1.24 & 9.29 & 2.35 \\
+std(act)  & 0.33  & 0.23  & 0.22 & 0.21  & 0.37  & 0.36  & 0.39 & 0.27 & 0.16  & 0.55 & 0.41 \\ \hline
+ 
+mean(act) & 2.64 & -6.85 & -4.02 & 0.41  & 1.82 & -1.17 & 1.29 & 1.26 & -0.88 & -2.87 &\\
+std(act)  & 0.17 & 0.54  & 0.36  & 0.47  & 0.24 & 0.24  & 0.39 & 0.44 & 0.20 & 0.31 &\\ \hline
+ 
+mean(gen) & 1.66  & 0.41  & 1.28 & -1.62 & -1.19 & -1.47 & 1.61 & 2.17 & 0.71  & 1.37 & 3.70\\
+std(gen)  & 0.31  & 0.14  & 0.31 & 0.19  & 0.24  & 0.23  & 0.15 & 0.14 & 0.11  & 0.44 & 0.41\\ \hline
+ 
+mean(gen) & 0.23 & -3.98 & 8.82  & -7.39 & 3.64 & -4.78 & 3.17 & 3.53 & 1.36 & 7.65 &\\
+std(gen)  & 0.18 & 0.50  & 0.20  & 0.33  & 0.23 & 0.26  & 0.18 & 0.17 & 0.09 & 0.17 &\\ \hline
+\end{tabular}
+}
+\end{table}
+
+\end{table}
+
+Расстояние Кульбака-Лейблера между распределениями параматров модели классификации активности и модели классификации пола оказалось равным $\text{KL}=56.20$
+
+\section{ Заключение}
+
+В данной статье исследовалась проблема классификации временных рядов. Каждый классифицируемый момент времени описывался параметрами локально-аппроксимирующих моделей.
+
+Результаты показывают, что использование пола при определении типа деятетльности не увеличивает точность модели логистической регресии и не уменьшает дисперсию, а использование типа актиности при определении пола незначительно уменьшает дисперсию. Количество ошибок модели C-Support Vector Classification и дисперсия не уменьшаются.
 
 
 \section{ Дополнение}
@@ -221,7 +259,7 @@ after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
 \begin{thebibliography}{99}
 
 \bibitem{Ivkin15}
-	\BibAuthor{N.~P.~Ivkin, M.~P.~Kuznetsov.}. 2015.
+	\BibAuthor{N.~P.~Ivkin, M.~P.~Kuznetsov}. 2015.
 	 Time series classification algorithm using combined feature description. .
 	\BibJournal{Machine Learning and Data Analysis} (11):1471–1483.
 
@@ -238,12 +276,12 @@ after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
 	\BibDoi{10.14357/19922264190106}.
 
 \bibitem{Isachenko16}
-	\BibAuthor{V.V. Strijov, R.V. Isachenko.}. 2016.
+	\BibAuthor{V.V. Strijov, R.V. Isachenko}. 2016.
 	 Metric learning in multiclass time series classification problem.
 	\BibJournal{Informatics and Applications} (10(2)):48–57.
 
 \bibitem{Popova16}
-	\BibAuthor{V.V. Strijov, Andrew~Zadayanchuk, Maria~Popova.}. 2016.
+	\BibAuthor{V.V. Strijov, Andrew~Zadayanchuk, Maria~Popova.} 2016.
 	 Selection of optimal physical activity classification model using measurements of accelerometer.
 	\BibJournal{Information Technologies}  (22(4)):313–318.
 
@@ -253,12 +291,12 @@ after adding   & 0.883 & 0.191 & 0.960  & 0.087    & \\ \hline
 	\BibJournal{Journal of Biomedical and Health Informatics}  20(6):1466 – 1476.
 
 \bibitem{Ignatov15}
-	\BibAuthor{Strijov~V.V., Ignatov A.}. 2015.
+	\BibAuthor{Strijov~V.V., Ignatov A}. 2015.
 	 Human activity recognition using quasiperiodic time series collected from a single triaxial accelerometer.
 	\BibJournal{Multimedia Tools and Applications}  pages 1–14.
 	
 \bibitem{Bochkarev18}
-	\BibAuthor{Isachenko R.V., Bochkarev А.М., Zharikov I.N., Strijov V.V.}. 2018.
+	\BibAuthor{Isachenko R.V., Bochkarev А.М., Zharikov I.N., Strijov V.V}. 2018.
 	Feature Generation for Physical Activity Classification.
 	\BibJournal{Artificial Intelligence and Decision Making}  3 : 20-27.
 
