--- a/docs/Hristolubov2020Accelerometer.tex
+++ b/docs/Hristolubov2020Accelerometer.tex
@@ -24,7 +24,7 @@
 \organization
     {$^1$Московский физико-технический институт}
 \abstract
-    {В работе решается задача классификации временных рядов акселерометра. Классификация производится в пространстве признаков, описывающих классифицируемые объекты (моменты времени). Признаки порождаются с помощью локально-аппроксимирующих моделей.  Предлагается выделить квазипериодические сегменты для каждого классифицируемого момента времени. В качестве признаков для классификации использовать параметры моделей, обученных на этих сегментах. Исследуется вопрос информативности порожденных признаков и возможность классификации типа активности владельца прибора или его физических параметров.
+    {В работе решается задача классификации временных рядов акселерометра. Классификация производится в пространстве признаков, описывающих классифицируемые объекты (моменты времени). Признаки порождаются с помощью локально-аппроксимирующих моделей.  Предлагается выделить квазипериодические сегменты для каждого классифицируемого момента времени. В качестве признаков для классификации использовать параметры локально-аппроксимирующих моделей, обученных на этих сегментах. Исследуется вопрос информативности порожденных признаков и возможность классификации типа активности владельца прибора или его физических параметров.
 	
 \bigskip
 \noindent
@@ -38,11 +38,11 @@
 
 В статье изучается задача классификации движений человека по временным рядам. Исследуется возможность выделения признаков моментов времени, которые могут быть использованы для определения личности или физических параметров субъектов данных в дополнении к их деятельности. Классификация временных рядов находит широкое применение в сфере здравоохранения.
 
-Временные ряды являются объектами сложной структуры, требующие предварительной обработки и представления их в удобном для классификации виде. Необходимо отобразить исходный временной ряд в пространство признаков. Например, в \cite{Ivkin15} временной ряд аппроксимируется моделью авторегрессии, а признаками являются ее параметры. В качестве аппроксимирующей модели используется модель сингулярного спектра, а признаками являются собственные числа траекторной матрицы. В работе \cite{Karasikov16} временные ряды разбиваются на сегменты фиксированной длины, на которых строится локально-аппроксимирующая модель. Для аппроксимации используется линейная модель, модель авторегрессии и коэффициенты преобразования Фурье. В \cite{Anikeev18} предлагается использовать в качестве сегментов интервалы между локалькными максимумами временного ряда. Еще более общий подход к способу сегментации посредством нахождения главных компонент траекторной матрицы, рассмотрен в \cite{Motrenko16}. В \cite{Bochkarev18} сравниваются между собой перечисленные выше подходы.
+Временные ряды являются объектами сложной структуры, требующие предварительной обработки и представления их в удобном для классификации виде. Необходимо отобразить исходный временной ряд в пространство признаков. Например, в \cite{Ivkin15} временной ряд аппроксимируется моделью авторегрессии, а признаками являются ее параметры. В качестве аппроксимирующей модели используется модель сингулярного спектра, а признаками являются собственные числа траекторной матрицы. В \cite{Karasikov16} временные ряды разбиваются на сегменты фиксированной длины, на которых строится локально-аппроксимирующая модель. Для аппроксимации используется линейная модель, модель авторегрессии и коэффициенты преобразования Фурье. В \cite{Anikeev18} предлагается использовать в качестве сегментов интервалы между локалькными максимумами временного ряда. Более общий подход к способу сегментации посредством нахождения главных компонент траекторной матрицы, рассмотрен в \cite{Motrenko16}. В \cite{Bochkarev18} сравниваются между собой перечисленные выше подходы.
 
 Метод кластеризации точек, соответствующих участкам разной деятельности, с помощью методы главных компонент (SSA, алгоритм гусеница \cite{Danilov97}) рассмотрен в \cite{Grabovoy20}. На участках, содержащих точки одного кластера, применяются описанные выше методы. Другим подходом к классификации точек временного ряда на основе нейросетей рассмотрены в \cite{Dafne19} и \cite{Cinar18}.
 
-В работе исследуется оптимальное признаковое описание точек пр которому можно будет идентифицировать род деятельности человека. Предлагается построить набор локально-аппроксимирующих моделей и выбрать наиболее адекватные. Производится построение пространства описаний элементарных движений. Новизна работы заключается в исследовании зависимости решений задач классификации действий и предсказании параметров человека. 
+В работе исследуется оптимальное признаковое описание временных моментов ряда. Предлагается построить набор локально-аппроксимирующих моделей и выбрать наиболее адекватные. Производится построение пространства описаний элементарных движений. Новизна работы заключается в исследовании зависимости решений задач классификации действий и предсказании параметров человека. 
 
 \section{Постановка задачи}
 
@@ -240,7 +240,7 @@ std(gen)  & 0.18 & 0.50  & 0.20  & 0.33  & 0.23 & 0.26  & 0.18 & 0.17 & 0.09 & 0
 
 В данной статье исследовалась проблема классификации временных рядов. Каждый классифицируемый момент времени описывался параметрами локально-аппроксимирующих моделей.
 
-Результаты показывают, что использование пола при определении типа деятетльности не увеличивает точность модели логистической регресии и не уменьшает дисперсию, а использование типа актиности при определении пола незначительно уменьшает дисперсию. Количество ошибок модели C-Support Vector Classification и дисперсия не уменьшаются.
+Результаты показывают, что использование пола при определении типа деятельности не увеличивает точность модели логистической регресии и не уменьшает дисперсию, а использование типа актиности при определении пола незначительно уменьшает дисперсию. Количество ошибок модели C-Support Vector Classification и дисперсия не уменьшаются.
 
 
 \section{ Дополнение}
