--- a/docs/Hristolubov2020slides.tex
+++ b/docs/Hristolubov2020slides.tex
@@ -1,12 +1,44 @@
-\documentclass{beamer}
+
+
+\documentclass[9pt,pdf,hyperref={unicode}]{beamer}
+\beamertemplatenavigationsymbolsempty
+
+\setbeamertemplate{blocks}[rounded=true, shadow=true]
+\setbeamertemplate{footline}[page number]
+\usepackage{multicol}
+
+\usefonttheme{serif}
+
 \usepackage[cp1251]{inputenc}
-\usepackage[russian]{babel}
+\usepackage[english, russian]{babel}
 \usepackage{amsmath,mathrsfs,mathtext}
 \usepackage{graphicx, epsfig}
-\usetheme{Warsaw}%{Singapore}%{Warsaw}%{Warsaw}%{Darmstadt}
-\usecolortheme{sidebartab}
-\definecolor{beamer@blendedblue}{RGB}{15,120,80}
+\usepackage{caption}
+\usepackage{subfig}
+\usepackage{amsmath, bm}
+
+\usepackage{comment}
+
+\usepackage{tabularx}
+
+\usepackage{tikz}
+
 \DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\argmax}{arg\,max}
+
+\makeatletter
+\let\@@magyar@captionfix\relax
+\makeatother
+
+\usetheme{Warsaw}
+\usecolortheme{sidebartab}
+\definecolor{beamer@blendedblue}{RGB}{31,96,49}
+
+\setbeamertemplate{enumerate items}[circle]
+
+
+
+\usepackage{ragged2e}
 %----------------------------------------------------------------------------------------------------------
 \title[\hbox to 56mm{Порождение признаков  \hfill\insertframenumber\,/\,\inserttotalframenumber}]
 {Порождение признаков \\ с помощью локально-аппроксимирующих моделей}
@@ -14,7 +46,8 @@
 \institute{\large
 Московский физико-технический институт}
 
-\date{\footnotesize{\emph{Курс:} Численные методы обучения по прецедентам\par (практика, В.\,В. Стрижов)/Группа 774, весна 2020}}
+\date{\footnotesize{\emph{Курс:} Численные методы обучения по прецедентам\par (практика, В.\,В. Стрижов)/Группа 774, весна 2020
+\par \emph{Консультант:} Сайранов Д.}}
 %----------------------------------------------------------------------------------------------------------
 \begin{document}
 %----------------------------------------------------------------------------------------------------------
@@ -28,7 +61,7 @@
 %\end{block}
 
 \begin{block}{Цель}
-Решить задачу многоклассовой классификации временных рядов.
+Решить задачу классификации моментов временного ряда.
 \end{block}
 
 \begin{block}{Задача}
@@ -59,14 +92,14 @@
 \begin{frame}{Постановка задачи}
 
 \begin{block}{Данные}
-Задан исходный временной ряд метками классов: 
-$$\mathfrak{D}=\{(d_i, y_i\}_{i=1}^M = [\mathbf{s}_1, \ldots \mathbf{s}_N],$$ где $\mathbf{s}_i\in Y$ (по элементно), $|Y|$~---~количество классов. Известен максимальный период $|\mathbf{s}|\leq T$.
+Задан исходный временной ряд c метками классов: 
+$$\mathfrak{D}=\{(d_i, y_i\}_{i=1}^M,$$ где $y_i\in Y$, $|Y|$~---~количество классов. Предполагается, что ряд квазипериодичен, причем известен максимальный период $T$.
 \end{block}
 
 \begin{block}{Модель}
 Модель будет приближать отображение $R:\mathcal{I}\rightarrow Y$, где $\mathcal{I}=\{1,\ldots M\}$~---~моменты времени. Будем искать ее в виде суперпозиции:
-$$\hat R(k) = b(w(h(k)), \mathbf{w}),$$
-где $h:\mathcal{I}\rightarrow \mathbb{X}$~---~отображение момента времени в сегмент $\mathbf{x}_k$, $w:\mathbb{X}\rightarrow W$~---~процедура построения признакового описания сегмента, $\mathbf{w}$~---~вектор параметров модели.
+$$\hat R(k) = b(\varphi(h(k)), \mathbf{w}),$$
+где $h:\mathcal{I}\rightarrow \mathbb{X}$~---~отображение момента времени в сегмент $\mathbf{x}_k$, $\varphi:\mathbb{X}\rightarrow W$~---~процедура построения признакового описания сегмента, $\mathbf{w}$~---~вектор параметров модели.
 \end{block}
 
 \end{frame}
@@ -80,8 +113,8 @@ $$\hat{\mathbf{x}}=\argmin\limits_{\hat{\mathbf{x}}}||\hat{\mathbf{x}}-\mathbf{x
 \end{block}
 
 \begin{block}{Признакове описание сегмента}
-В качестве признакового описания $\mathbf{w}(\mathbf{x})$ сегмента $\mathbf{x}$ исполуется вектор параметров локально-аппроксимирующей модели $\hat{\mathbf{x}}(\mathbf{v})$:
-$$\mathbf{w}(\mathbf{x})=\argmin\limits_{\mathbf{v}}||\hat{\mathbf{x}}(\mathbf{v})-\mathbf{x}||_2.$$
+В качестве признакового описания $\varphi(\mathbf{x})$ сегмента $\mathbf{x}$ исполуется вектор параметров локально-аппроксимирующей модели $\hat{\mathbf{x}}(\mathbf{v})$:
+$$\varphi(\mathbf{x})=\argmin\limits_{\mathbf{v}}||\hat{\mathbf{x}}(\mathbf{v})-\mathbf{x}||_2.$$
 \end{block}
 
 
@@ -91,37 +124,46 @@ $$\mathbf{w}(\mathbf{x})=\argmin\limits_{\mathbf{v}}||\hat{\mathbf{x}}(\mathbf{v
 \begin{frame}{Решение}
 
 \begin{block}{Первый этап}
-Отображаем классифицируемые моменты времени на локальный сегмент временного ряда.
+Классифицируемые моменты времени задают локальные сегменты $x_k$ временного ряда.
 \end{block}
 
 \begin{block}{Второй этап}
-Для полученных сегментов $\mathbf{x}_k$ строим признаковое описание с помощью локально-аппроксимирующих моделей.
+Для полученных сегментов $\mathbf{x}_k$ строится признаковое описание $\varphi(x_k)$ с помощью локально-аппроксимирующих моделей.
 \end{block}
 
 \begin{block}{Третий этап}
-После получения признакового описания каждого момента времени, решаем задачу классификации моментов времени ряда.
+После получения признакового описания каждого момента времени, решается задача классификации моментов времени ряда.
 \end{block}
 
 \end{frame}
 %----------------------------------------------------------------------------------------------------------
 \begin{frame}{Вычислительный эксперимент}
 
-\begin{block}{Цель}
-Изучить влияние решения одной задачи классификации на решение другой (задачи классификации типа активности и классификации пола человека). Сравнить распределения параметров моделей, построенных для решения этих задач.
+\begin{block}{Цели}
+Решить задачи:
+\begin{list_type}  
+\item 1) классификации типа активности,
+\item 2) классификации пола человека.
+\end{list_type}
+
+Изучить влияние решения одной задачи классификации на решение другой. Сравнить распределения параметров моделей, построенных для решения этих задач.
 \end{block}
 
 \begin{block}{Данные}
-Для эксперимента берется шесть временных рядов в $39000$ временных моментов ($780$ секунд). Данные снимаются с четырех человек (двое мужчин и две женщины), которые выполняют подъем или спуск по лестнице (два типа деятельности).
+Для эксперимента берется шесть временных рядов в $39000$ временных моментов ($780$ секунд). Данные снимаются с акселерометра, которым пользуются четыре человека (двое мужчин и две женщины), которые выполняют подъем или спуск по лестнице (два типа деятельности).
 \end{block}
 
 \end{frame}
 %----------------------------------------------------------------------------------------------------------
 \begin{frame}{Влияние решения одной задачи на другую}
 
-\begin{table}[H]
-\caption{Среднее и дисперсия доли верных классификаций}
+\begin{block}{Кросс-валидация}
+Для оценки обобщающей способности моделей используется k-fold кросс-валидация на $\text{k}=13$ подвыборках.
+\end{block}
+
 \begin{table}[H]
 \centering
+Среднее и дисперсия доли верных классификаций
 \resizebox{\columnwidth}{!}{%
 \begin{tabular}{|l|l|l|l|l|l|l|l|l|}
 \hline
@@ -134,17 +176,22 @@ after adding   & 0.933 & 0.101 & 0.966  & 0.072  \\ \hline
 }
 \end{table}
 
-\end{table}
+\begin{block}{Анализ}
+Использование результата решения одной задачи классификации существенно не влияет на качество решения другой задачи.
+\end{block}
+\end{frame}
+%----------------------------------------------------------------------------------------------------------
+\begin{frame}{Распределение параметров моделей}
 
-Использование результата решения одной задачи классификации не влияет существенно на качество решения другой задачи.
+\begin{figure}[H]
+\center{\includegraphics[scale=0.33]{hists}}
+\label{fig:image}
+\end{figure}
 
 \end{frame}
-
 %----------------------------------------------------------------------------------------------------------
-\begin{frame}{Вычислительный эксперимент}
+\begin{frame}{Среднее и дисперсия параметров моделей}
 
-\begin{table}[H]
-\caption{Среднее и дисперсия векторов параметров моделей}
 \begin{table}[]
 \centering
 \resizebox{\columnwidth}{!}{%
@@ -164,22 +211,23 @@ std(gen)  & 0.18 & 0.50  & 0.20  & 0.33  & 0.23 & 0.26  & 0.18 & 0.17 & 0.09 & 0
 \end{tabular}
 }
 \end{table}
-\end{table}
 
 \begin{block}{Расстояние Кульбака-Лейблера}
-Расстояние Кульбака-Лейблера между распределениями параматров модели классификации активности и модели классификации пола оказалось равным $\text{KL}=56.20$
+Расстояние Кульбака-Лейблера между распределениями параметров модели классификации активности и модели классификации пола оказалось равным $\text{KL}=56.20$.
 \end{block}
 
 \end{frame}
 %----------------------------------------------------------------------------------------------------------
 \begin{frame}{Заключение}
 
-\begin{block}{Резюме}
 \begin{itemize}
-\item Рассмотрен способ описания момента времени по локальной  окрестности (сегменту) этого момента времени.
+\item Рассмотрен способ описания момента времени по локальному сегменту этого момента времени.
 \item Произведена классификация типа активности и пола человека.
-\item Найдено расстояние между распределениями параметров моделей для решения этих задач классификации. 
+\item Сравнили распределения параметров моделей для решения этих задач классификации. 
 \end{itemize}
+
+\begin{block}{Вывод}
+Распределения параметров моделей классификации типа активности и пола значительно отличаются.
 \end{block}
 
 \end{frame}
