--- a/docs/Hristolubov2020slides.tex
+++ b/docs/Hristolubov2020slides.tex
@@ -79,7 +79,7 @@
 \begin{block}
 {\bfseries Базовая литература}
 \begin{itemize}
-\item{Кузнецов М.П., Ивкин Н.П., \textit{Алгоритм классификации временных рядов акселерометров по комбинированному описанию признаков}. Машиннное обучение и анализ данных, 2015}
+\item{Кузнецов М.П., Ивкин Н.П., \textit{Алгоритм классификации временных рядов акселерометров по комбинированному описанию признаков}. Машинное обучение и анализ данных, 2015}
 
 \item{Isachenko R.V., Bochkarev А.М., Zharikov I.N., Strijov V.V., \textit{Feature Generation for Physical Activity Classification}. Artificial Intelligence and Decision Making, 2018, 3 : 20-27.}
 
@@ -113,7 +113,7 @@ $$\hat{\mathbf{x}}=\argmin\limits_{\hat{\mathbf{x}}}||\hat{\mathbf{x}}-\mathbf{x
 \end{block}
 
 \begin{block}{Признакове описание сегмента}
-В качестве признакового описания $\varphi(\mathbf{x})$ сегмента $\mathbf{x}$ исполуется вектор параметров локально-аппроксимирующей модели $\hat{\mathbf{x}}(\mathbf{v})$:
+В качестве признакового описания $\varphi(\mathbf{x})$ сегмента $\mathbf{x}$ берется вектор параметров локально-аппроксимирующей модели $\hat{\mathbf{x}}(\mathbf{v})$:
 $$\varphi(\mathbf{x})=\argmin\limits_{\mathbf{v}}||\hat{\mathbf{x}}(\mathbf{v})-\mathbf{x}||_2.$$
 \end{block}
 
@@ -223,7 +223,7 @@ std(gen)  & 0.18 & 0.50  & 0.20  & 0.33  & 0.23 & 0.26  & 0.18 & 0.17 & 0.09 & 0
 \begin{itemize}
 \item Рассмотрен способ описания момента времени по локальному сегменту этого момента времени.
 \item Произведена классификация типа активности и пола человека.
-\item Сравнили распределения параметров моделей для решения этих задач классификации. 
+\item Выполнено сравнение распределений параметров моделей для решения этих задач классификации. 
 \end{itemize}
 
 \begin{block}{Вывод}
